Move editor's key event listener, xbl commands, and typeahead find into the system event group.  This allows event listeners in content to reliably cancel key events.  Bug 54035, r=jkeiser and aaronl, sr=hyatt and kin.